[package]
name = "l3"
version = "0.1.0"
edition = "2021"
description = "lizelive's core library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
semver = { version = "*", features = ["serde"] }


uuid = { version = "*", features = ["serde", "v4"] }


smartstring = "*"

# acid-store = "*"
num = "0.4.0"

object_store = { version = "0.5.6", features = ["serde", "serde_json"] }
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
bytes = { version = "1.4.0", features = ["serde"] }
serde_json = "1"
serde_yaml = "0.9.21"
toml = "0.7.3"
tokio-util = "0.7.7"

# serde
serde_with = { version = "2.3", features = ["json"] }
time = { version = "0.3.20", features = ["serde-well-known", "formatting", "macros"] }

tracing = "0.1.37"

reqwest = "0.11.16"
regex = "*"

typed-builder = "*"
maplit = "*"

itertools = "0.10.5"
lazy_static = "1.4.0"
either = { version = "1.8.1", features = ["serde"] }
derive_more = "0.99.17"
